--- a/style.css
+++ b/style.css
@@ -1,8 +1,31 @@
 body {
 	background-color: #333333;
 	color: white;
+	padding: 0;
+	margin: 0;
 }
 
 nav {
 	background-color: white;
+}
+
+.top_banner {
+	width: 100%;
+	margin: 0;
+	padding: 0;
+	background-color: white;
+	top: 0;
+	left: 0;
+}
+
+table {
+	width: 100%;
+}
+
+h1 {
+	margin: 0;
+}
+
+.center {
+	text-align: center;
 }
